# borg-vinculum

./: .gitignore  Cargo.toml  LICENSE  README.md  Vagrantfile  deny.toml
.github/workflows/: linux.yml
borg-connect/: Cargo.toml
borg-connect/src/: config.rs  main.rs
borg-drone/: Cargo.toml
borg-drone/src/: api.rs  config.rs  create.rs  hooks.rs  main.rs
borg-drone/src/commands/: mod.rs
borg-parse/: Cargo.toml
borg-parse/src/: lib.rs
borg-vinculum/: Cargo.toml  Makefile.toml
borg-vinculum/frontend/: .gitignore  index.html  package.json
borg-vinculum/frontend/src/: index.css  main.tsx
borg-vinculum/frontend/src/api/: api.ts  error.ts  schemas.ts
borg-vinculum/frontend/src/components/: checkbox.tsx
borg-vinculum/frontend/src/styling/: components.css  home.css  login.css
borg-vinculum/frontend/src/utils/: formatter.ts  router.tsx
borg-vinculum/frontend/src/views/: home.tsx  login.tsx
borg-vinculum/migrations/: 0001_initial.toml
borg-vinculum/src/: config.rs  main.rs  server.rs  swagger.rs
borg-vinculum/src/chan/: mod.rs
borg-vinculum/src/handler/: mod.rs
borg-vinculum/src/handler/api/: mod.rs  report.rs
borg-vinculum/src/handler/frontend/: auth.rs  drones.rs  key.rs  mod.rs
borg-vinculum/src/middleware/: authentication_required.rs  handle_not_found.rs  json_extractor_error.rs
borg-vinculum/src/models/: account.rs  drone.rs  mod.rs
borg-vinculum/src/modules/: matrix.rs  mod.rs
borg-vinculum/ui/: index.html  package.json
borg-vinculum/ui/src/: index.css  main.tsx
borg-vinculum/ui/src/styling/: background.css  components.css  login.css
borg-vinculum/ui/src/utils/: router.tsx
borg-vinculum/ui/src/views/: background.tsx  login.tsx
common/: Cargo.toml
common/src/: lib.rs
vagrant/: drone.yml  example.vars.yml  remote.yml  vinculum.yml
vagrant/drone/: borg-drone.service  config.toml.jinja2  id_ed25519  id_ed25519.pub  id_rsa  id_rsa.pub
vagrant/vinculum/: config.toml.jinja2  id_ed25519  id_ed25519.pub  id_rsa  id_rsa.pub  vinculum.nginx.jinja2  vinculum.service
