[package]
name = "borg-drone"
version = "0.1.0"
edition = "2021"
authors = ["Niklas Pfister <git@omikron.dev>"]
license = "MIT"
repository = "https://github.com/trufflepig-forensics/borg-vinculum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cli parser
clap = { version = "~4", features = ["derive"] }

# Async runtime
tokio = { version = ">=1.23.1", features = ["macros", "rt", "process"] }
# Posix parser
shlex = { version = "~1" }

# Http client
reqwest = { version = "~0.11", features = ["rustls-tls-native-roots", "json"] }

# serialization support
serde = { version = "~1", features = ["derive"] }
serde_json = { version = "~1" }
toml = { version = "~0.7" }
url = { version = "~2", features = ["serde"] }
byte-unit = { version = "~4" }

# Logging
log = { version = "~0.4" }
env_logger = { version = "~0.10" }

# Borgbackup wrapper
borgbackup = { version = "~0.6", features = ["tokio"] }


# The common structs of borg-drone and borg-vinculum
common = { version = "0.1.0", path = "../common" }
