[package]
name = "borg-vinculum"
version = "0.1.0"
edition = "2021"
authors = ["Niklas Pfister <git@omikron.dev>"]
license = "MIT"
repository = "https://github.com/trufflepig-forensics/borg-vinculum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Webframework
actix-web = { version = "~4" }
# Helper and middleware for actix-web
actix-toolbox = { version = "~0.10", features = ["logging", "session"] }
# Webauthn library
webauthn-rs = { version = "~0.4", features = ["danger-allow-state-serialisation"] }

# Hashing
argon2 = { version = "~0.5" }
# RNG library
rand = { version = "~0.8" }

# Swagger generator
utoipa = { version = "~3", features = ["actix_extras", "repr", "chrono", "uuid", "openapi_extensions", "preserve_order"] }
# openapi swagger boilerplat generation
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }

# Cli parser
clap = { version = "~4", features = ["derive"] }
# Read passwords from cli
rpassword = { version = "~7" }

# Serialization and deserialization library
serde = { version = "~1", features = ["derive"] }
serde_repr = { version = "~0.1" }
toml = { version = "~0.7" }
serde_json = { version = "~1" }
# uuid generator
uuid = { version = "~1", features = ["v4", "serde"] }
# Base64 decoder and encoder
base64 = { version = "~0.21" }
# Support for url parsing
url = { version = "~2", features = ["serde"] }
# Datetime library
chrono = { version = ">=0.4.20", default-features = false, features = ["serde"] }

# Logging facade
log = { version = "~0.4" }

# Async runtime
tokio = { version = ">=1.23.1", features = ["macros", "rt-multi-thread", "sync"] }
# Async helpers
futures = { version = "~0.3" }

# ORM
rorm = { version = "~0.5", features = ["cli", "tokio-rustls", "uuid"] }

# reqwest
reqwest = { version = "~0.11", features = ["tokio-rustls", "json"] }

# Borg backup wrapper
borgbackup = { version = "~0.5", features = ["tokio"] }


# The common structs of borg-drone and borg-vinculum
common = { version = "0.1.0", path = "../common" }

[features]
rorm-main = []