[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["Niklas Pfister <git@omikron.dev>"]
license = "MIT"
repository = "https://github.com/trufflepig-forensics/borg-vinculum"
description = "The common structs for both borg-drone and borg-vinculum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serialization and deserialization library
serde = { version = "~1", features = ["derive"] }

# openapi generator
utoipa = { version = "~3" }